made some test ideas for later

--- a/investigation.org
+++ b/investigation.org
@@ -18,30 +18,34 @@ with open('ubuntu.torrent', 'r') as data:
 #+RESULTS:
 
 
-#+BEGIN_SRC python :python ./venv/bin/python  :results output
+#+BEGIN_SRC python :python ./venv/bin/python  :results output :tangle bla.py
   import sys
   print(sys.version)
   print("BLA")
   from bithydra.bencode import bencode, bdecode
   import pprint
   import functools
-  def split_20(pieces):
+
+  def split(pieces, size=20):
       batch = []
       for index, byte in enumerate(pieces):
          batch.append(byte)
-         if index % 20 == 0:
+         if len(batch) % size == 0:
             yield batch
-      yield batch
+	    batch = []
+      if batch:
+         yield batch
+
   with open('ubuntu.torrent', 'rb') as data:
      result = bdecode(data.read())
      pprint.pprint(result)  # nope
      with open('output.torrent', 'wb') as output:
         output.write(bencode(result))
   pieces = result[b'info'][b'pieces']
-  print("->>", len(pieces))
   print(type(pieces))
-  for i in split_20(pieces):
-     print(i)
+  print("->>", len(pieces))
+  for ii in split(pieces):
+     print("".join([chr(i) for i in ii]))
 #+END_SRC
 
 #+RESULTS:
@@ -1617,8 +1621,1482 @@ BLA
                       b'\x93 \xcf\x16I\xf4/\xe0\x97\x0f!q\xfamU\x15'
                       b'\x94W\xe5\xc5\r\xe7\xbajO\xa9\r\xce\x944\xff\xce'
                       b'\xf5}M\xdc\xcdx\x15\x1c\xffiW3'}}
-<>> 26720
 <class 'bytes'>
+->> 26720
+d7¼âÈ=¹-ªpmóñê$¦
+¹5sÀNÉÌtßç±Â~¦
+I¤ç.lûHÞ[ÉÞçñxå
+Nü7âmP+Ð?Ì6$f
+µù´
+,¶h©oM}eBÁü
+«blb»îYn%ÙLñÅY
+«¼§OÆØ0Ã ÚÁÆùûÃ¡±³cY
+2à×B|¤ÆéKpÝ0`Z!Ö
+º( Õôû3Ü öóp
+^x¥Ô+Ò26ZJéEYRßÍ
+ÌL?,¼çzak$åÜr.o¿µFr°
+ä¨4º>Ë¦$/:2BEM[d
+Íç!>/ºäQTÛj¼¿¯¿Éµ^
+³®YWìªG]LÜZ!
+»]Â
+»[Jòð¬ÑÚýä
+Ñ²ÙÍzÍ`1r>*¿
+~,ÅòÆ¨%CúÓQÃ2Së+
+T|uÀxÏÊ(E2<ø<ðj
+X2Ø¤µç¿ð$mBFû²
+ÕR~éfL®bèö&®
+^C)gÊ¢ÔlÕáÚeJù
+Á|7÷:¢º#Íìíó¶
+Jî4W¤íÅË_0
+GZ³pb2%oÏDJ»úìâ
+ô¾
+F=æwà*}Úôw|
+ ÆäO(úRÚÙhÊ0A
+|JôîYI+×'Ø¾ö8`_Ç
+6ûØÆô0³.=§UÒ W
+!Ô¥*N[K0-ØÈîÿCï
+÷mA¼>¸©$øø\Úªrbd_Ø
+5ª§GJGô¦KzxBYó{ûÊ
+EÍp6õ[¸ ÈsLÜºp#
+³âÑÒi*b­Jã FdØ
+ÌJÕ¦Mµ6q´¨éA¦Ú
+Úâ'×ù¼nK`åþ'-
+mù¸ª|w~H1§Å]ÆÈ
+ÛvmÞÝñE\u¾AIÖ!Ò
+8["Í-|³Íh¯p4UM
+çK°íø.uho5©ã!|Å·A
+ÅZzjÖ ã w8/Ü²T
+Õïô7<7T®Cý='ïØþÐ
+!"{4ÝÝÊó/ë<ô]r
+eÐl>Z×èÛBµqÁ¹`o
+ÅÛCÄ4ÚÝnM-½w u
+2i/<(6×èäÓÄÙZ S)
+¡5'Ï~}5£ZîÌ2n(
+ÂI2G@ñåU×÷"2º+Ñ
+·äQ1Å³­¨í¦t"Åzifz,^j
+
+Ñ=aÖ%v²_X=ùØG
+Ø³¥THÖ'CÀ^Ù¾a¯Ñ
+F¤¿ÁÔ3?¯ÇCÚM¶;xÿñ
+_ª£cVÈ$¸¹)áá£ª
+eµD.ó×ò^ìáZÜN]kø
+öÌ²G°¼ÒäÌÅ ÷Æ
+^­É¥}`dBo¸pS
+÷KµÆÞûà8À4òCå/
+®de^¶&ý¨ÇCïJºì1
+}\î÷Øê9
+FâÊu
+Â´üÑQ^ÎøOåûq-É;z
++í<hOsbfr¯hò
+ÁÉ·^?}ik­q$`ñN
+bÖ¸ÙXB" ±áá0EXÖ
+ÉwýÅªfp
+òù
+Éð
+Ð-×WÑõí½5ô·8²
+;(ÖØ	t
+¤õóêð£¥dV-
+;ÐÌ}½È`Î\ákòÕU
+ä¸j[Æ_­Üízg2Ô)
+4µ×«äÅ;loL[rNw
+­<6µo×¯v FÛzÏ
+ôü#¨
+áñ­"ð:ô±x
+5
+Ç4üÇa&£{LÉgþ*²N
+®2ª&¾hÌ.0Í)®¨+v
+í;zx©6oÛÅÂ­ÀÔµY¤
+*v2ì3¸lã÷³ãUÍ|Ô¾M
+&?tvlÅhÕk1ä­½ÈéS§
+MY¸:mùÛ9Jê:O²çU
+÷bËê?Ò¨üò¤¹!ÃUsx
+O@Bjøßûî¬Îüæ/eÉ
++áOÓ±JP³2ËÖSnÛ
+¶§6ö±Ä×:<¼þáC²Îê
+Dò	àÕPpSa»½PM
+¿¢ ½ÌmöÛ¬E7Z< W
+Ø-¢
+¸ÑB¾¬[Úõ
+/ò
+È|äÙ6lÂý®dOÝD:Û
+í©%¼%d+Ì;ÏQÚ?'ÄJ
+f&¾¡wTv©,É¿ª79ó#
+__îÄÄIfÀ0ÙT
+#='ýøõÔuV¾Èþ
+õöN#oü×[±´àn/æumN
+úÁùw;N ¹ã¤_ùnÐ
+ã£± cÞ£N<!Ê×_L?
+°øL4Å$ñFBUÐ
+Ê×
+ÿ}GW½UìêYZZèåÅ¨
+ÿ
+ >'åÄüí À4ëÝQ
+zÞÒ¬kN_=÷õ0È%
+>¤Ë¹ÿ·71¦¹ãÛ|$
+]P	I×s[Õ6rQèè
+:N÷$Üüy£yW4êÔ
+éd¦ÿy'(¾-CLAº¸=¹ë
+ÒÇö¿f-"Ü	*=ã¯
+pãô/¸'Ü
+ûQ%S á¤g
+ì1ÿñBò$HXÒf¾4â
+_*WÏ¥3Å)Û|[¤´
+W,Nkr=@;UÔâÔcä
+îÀ3µ5/fúÖp©§¿×üÈ
+ ÎtkXsÌ£Ðm\rr
+W¹,»Cã^ìù;' [ýEìV
+ÉÁÓøá%ã "á?ëÆ#
+¶^ÜÂ:J½øþ»k»c.
+
+¥5õî¾KOüq8á6ivã
+¾_:íJH>U B Çì¥¡
+ÇÐÇ|»±uÒx|Öf@±
+ïøuèÈè6CÙÊd¬
+?ÚÓ;ÎD#Y¥s&d\¡
+»ç®`u²tK01ötÿfÜT
+gØ"Ö·~%CYÝD#%
+iä
+ÒP0Ü`l<opÀ1¤æÇQÖ_
+r0G.ÿÿÊGâ¿
+Qý¹ó;È?"80í/Z)) 
+RZtIè/Û´zÀ
+0ÆÙÄ}¡m;ié­uÒµ&è[
+eàOG]D£;¼Qº°
+ÿ\UrCl.êT ®Í·UÄ
+³gÎ©µgñx}~Ij@¦Ü
+[O'`³ø`ÞÇL@J
+ÌoÂ3tn<¢áÕÀèY9ã 
+q/ÊØ>8­§v¦?/%­½
+5ôröeÒ/Úyj¬BäJ
+õ9<ÿv'°±âh¶Ñ5³ÙZøX
+ØøÄ«ãA' ^OÏ;{ÞW°
+TðÐ>´0¿ÊÂX
+2*V×fÎêÇti_°RÌ
+vSíF
+8v³Tß@*qS*
++û#±;6¬[Ï ü9®í°¸
+ý³´iÓ	`mÁÊmN/H
+ò-¢uq©b-9øêÂÏ
+1ô7¯Â_ÑJ×påÄU÷;J¹´
+¬cZÄg~2LoÂå
+r?^Qá½>Ek_bÁ³.
+«r¸yêÙ)!V½FM£±
+9ï¾#¬\3è@Ãn¹Q
+ý7;°% Õ*/4z@$Cë
+.;2 iduY°|nÉB
+ê´¬2¬_{°XîcbÆ¸ÚÕY
+²&î¼ÇÇør¹ðOIb]<¨
+j4
+%'T*'àjºe
+jR*c,&å;ÒÌKÞÏÁæ
+jR*c,&å;ÒÌKÞÏÁæ
+vVWm^¹|7A?Gþ
+HÁË *üÇy79@Û ±Ù®W
+ËBbUcHðºDÞCW@¯±1
+¡AåúgòYÙÈ fXø{¡m~ò
+Ê	Ñ¼°L¥	zëó4[ó
+wáï=cXËià2$_]T	1
+eqGNfñ§°B¦Ñoæ°¬
+¾ewyú±åiôÛ.Pü
+¥fübÊ\Û[Û1ÜR
+ýZÔù4SK5'ÀìG-­c
+Á@ìïU;å
+öxY§±²
+Ë ßi Ã¼÷áÓ5ÈxT
+-G:ï#à	`5LÂ}®
+¾ø¹6ï7·¦àoVL .ù
++÷âs¸=çê¯±Gî¤ v
+
+÷&J(~LÐZ»}Ä7?=ËÃ
+¥1eTo}ü»Ð©®âäÚ?)
+ÖsQ Çñ]VTé
+u5É
+tæ«»õn½j»ÁÆGä
+þ:²jÒ[nD*×Ðüj
+¦iþX~¶að¸LñBN»ÎV
+æÏöÝ­8Ch6;'eÓ">ß
+|:ÝMÏÛÞÌçä²ØK
+h?ãÚÔò½Éi³þüc0
+¥-#Ä3Øyû³z nb²
+Ãù©ð »ú[ªNooU5Z·¨3
+×¦bntüÙ8ÆÛÎ`½Ã³
+n äÕÛyÒ¢Üõé×
+cRá áÈåº¥QÒ£»´Ê?¶
+.	0Ìu@ÒY¨ñÑ
+±
+V!/í¯Weë~Í1QúgÓ
+rËòâÿôuðÈNNY # 
+,Dý{wþñÝØ0*jã!Îf
+°×;e"=¦E* TËå÷ù
+öï
+u|ó7u³JÙéù¦B
+ì"ü9ÚêîcWn{Ü}ßa
+ÑjõX\rIR «0÷±gÁ7
+%Í¿@hlÔ<ÏÕå³È{mWçN
+o[óõ oUÇ×Øí:{âÜ£
+*E¡¢Õ_6V|ú/<È.[c}
+	êÅÉ©(ÒÙIÂm PqýóúÐ
+/ÝÑ¥Z_@]Èv|1Øì
+n` Í"N®Þ9:Y%:
+ó+ÂhBVÈ¬Â"¢
+H&½RM°Y_0r.µ÷
+S¦ÒÂ=«íÚZ«õ ®¸z
+b=þh¯{øD.¸­óX&
+b~PRÅé8î¼¡ek	%àK
+&äll7»¢è÷õ ¼8¾`¿ô
+êk5]Cè]×<¶ý8~ª
+úRâ¢àûá9d ÎPH×ü)È]ï
+jã¸ nùMØW!ÚÚ«öá
+`ZéÖ/õ×3G½ò¢Ìawc¦åf
+Ë'%rý0ù¥P.DÃsæ¯³
+ånÄÝ®Bl?>[WBäJ<=
+5";»äh0xfh1?\á/b
+ÍïæGçÒ}0ï;¤2rQmÅ
+ä=a÷GNNþÊ (ÉÄ0s
+ao(·¨Æ×laÎº²bâ"_
+[¥ç®_rÎPûãçOÆØþ
+mÓcÍ*î®BÖW9kýÊÚ]
+*^©7ÅØ¶ùeÝ@À`Dö­¦
+ôi§xL,ëÏè¾szMÍ»q
+hiD^9«ÂÀv1x
+ò«¥®n@
+8Îxvn¿¥ryÁSz
+$bÏHÊd>> È³?Ôatæ
+Gñ¯)KlÙs&. 	!½m
+Ä"¬í ûÚö¨zGk¨½t
+}ÞÍ¹åÅz	TÚ³áX:HBG{
+õvâ,óMGm9©7Ô¯Aé[Aë
+íüÉðáÜ%F6Dî#p
+)k«r#Ëõc(u[Ù{¥
+&Ç:}·´Tw_Ù­´Ü~
+ÇÈI@7ª~´5áT¦!þ
+HP]È@H-Æcð¸Yb[pÄ$
+JÎmõ,W~½Â¾Î [ÒcX
+ÕsÞ8«S°_Ç~ÛP* L5©¼
+q=úwÊØm	Ö4ÍEQbô
+¡	GµüÐ\ÉÙ³Xï(
+­áGå½zCc¼va3U¯õßª
+ç4ÎÁË;tÕ®¤WJôÃ
+?µ
+À¥¼C§v?EíLç¾Ô
+¤RU^ÜÃ£ô¬Àª®lß%þà
+dc~I ü«.^´ë.¥Ú7
+mNLÝ;¥ÖÜÑ6´ÑOy
+â!:7ñiºÀÝ³ÈÔÛTg×ø
+î¯LTAr~ÿ¸³LPÔ^g
+.Þxø¿RVòÉ{shk
+É6¶³î+úsoy'·²
+X&µ¹ÆSË`®X­i8Ø
+=¹'UUq<aVëÔAÒ
+©j?ìÐ¶§tÎþ^s¿
+}.ì«M|¤ó$¬§Á³Ö
+¬ÕàÏ4Hsgð¡»¹=fÌú
+ÃÔº0BàÚ÷ðHüØ¢ZòNèåF	
+H-}íïGÉw¥ô¿º Ä¼
+· Hà[9m`·Â"÷;^
+êYèôuÜ§s+;ïck
+oòGdþ#Oº«×k®¿ú
+üh S¨(£bü÷\ö=÷?,
+µ%Þ] E«öÞIpë2cP
+Ê{aéx¡ÒôXæ?õ­¹
+¸E(%%énm ¹9
+Í¡UïôÆ.¹5_l¼÷2
+×Þ¸èÏùqÆÞ$-ó!ÃoÙäâ
+
+ýpéÕþµC&×U£z£ñ·á
+Ê§ÄÓôU¶Éº£fP
+Ãx çÂ[ÅÓìÉ9ö<^¡
+Ü:Oß
+lâM,9 ÕÕvôØ=8
+ßÖ­=Wþ^~×tÿÂN£lÖ
+GÐm¥Reg°ºï#Ä«e8§®\
+WÃåinû<êfoÿ÷æf*>q
+/æö|ªv¶Õ®jàòQ
+m¥v'ç»ãikó-
+q´&yÂþ­ëß£ü¬¥i
+¥Å­TÓ½¹hfâÅ¿G
+wì ûgëDÑ±+¦óæÇf¤×
+üR:Ñ±?<&ÏòÉR ÷êF
+fÃ¿y©ù2èS¯p.ÐºÂ
+øh-ciAèÉ/õJe
+þÂÇÄµZË'ÈUB+¡µ8p7
+Ìïpå\¤+v×æîRå=aE
+Ì0õØÑÀP ÃA¬Õpí
+É9ÆÖÎ07¾6c< Q>ÿ^
+´~vê8]$9/löÆIT¢Psy
+Ä!pûÖ ÓÈ'ä¸ïÉb
+ûÃvVÊö¨Õ)A	
+fÔ]ºP;F¶F¶lzþ¦7dâ
+ø}«^ïÚó3$Í­:î²
+ÁÂ(Ë	ò}Æ¡¹µì\Ù®
+/þ 7Ypôóye
+*Ï+<B¼ÞV ú\Úsw
+öuNZlS ù'í²Áv:
+Úì÷^á¡½§n2¯¾aAH!ø¯
+ü¯Ñ:½»ó
+ÓÚü580Ì
+µKÛÞnMÙ	»>ÚúÜ¸ô
+
+	tÏY)¤»)¿äR±J
+®eËB1¤E3u&XÆK¡v
+U¼Eøéu Êb)Y:Å¼ô
+§íÛÛüa46úùÙì¥
+í× ÁgBÜÈÌgÚð
+ÖáJÜÚ={ÇESb-¬U
+u+O¨®ïGe¡ÆnP5­
+ð: m
+'mËï£ÐÌtûÄ<D
+ÍJÛóTôcÅ}¹aekÜÈ
+â1ç;tÊfâ±=47z°í
+Âé|Tv¸ÿ:Ö¢p1½ÞV@±
+Ê@Zò ¿þäÑh® EÒÚ
+Í-Û5gÖãïpðPÌLjk
+ÀçKß$¡GOÞ³íp"É
+lÔ4ídoÚðK÷Û+hé²ç
+Ð+|ø¯)1±¤ìoÂ"$å6J
+ÓÊ¹®³rï¤9(â ðºÿD
+´ÛÒGÐk[¿×-AÇ­~5
+ç
+UJAÇ_\òÔJèÄGü×ò@ß
+6\©³Ñÿ^	9¢ãÞV±¡s&0Ä
+;,LQqV±îlFH?m÷1
+¯,«Ì¤X·!ûÆÒÒ/8Ü 
+È{Râ?&iiæ¾f6~[uX
+ÛT/ì ©±n^Ç?Ð·[éÄè
+%ãänYÁ/ÿ­Ê \GO
+ßäÄÍÛ÷®#«
+ÊÞK¹¿²ö`¾÷Ä»Hh
+8ÃC-ãÎ-Ý[@,°fÄ
+3Ä'ùgD
+ýÿõ_~}àqÎT
+'¹=w}oÈI¦ÜúG§
+8:³÷[31û J¬Ùùªá6
+-ðÿs³þ½t (£´>ßñ
+mÅ×°P¦0#WuI0Ûû»
+cÓ%oøSãìÑòÑ ±Ó+ùG
+gÜ¯O?-»#¸ùF7ñû`+
+MuwÖ­rÆ7±m»}2%{
+Ï
+®¾ýú¡Øu¨ªcirSh%ì=ÄW¡
+ÿÏÇw¢Åõ<r©úyü6
+; $røù~éøå_ußÙç¯1wü
+ [i( ©ßã^·ñÀàB<}
+òkã[é0þ :l)dæT1®À
+R>Ä´Ð±$Eê{ó9ÎCÕ
+Y­QOûÃnÌûeº|ãvÂ¹
+ìxUÆµ°iÿfh[Ò$Á
+ÝúX%%CG¨À Kõs
+¬ØèDËW­7ýþìH1$S¤
+äC×·¶edN/ê±ÚÏÓ±ÅÈË
+JâæEÐV£å¸;ùa@än4
+éÏþî©3Q¶/U _`
+
+îóKá<î^ß~y;¹(
+NÍ*0jÿëÇ<ÃB¨&r¯
+Ô¶ÇVïa.\FRÖÞ:Úb|(
+sÀÖH¡Uì³l+Z>µ
+Jud3w¹¨¡	Ç¤2±ø{z?
+áë¯|&®6XaVÓ
+ß¹
+òÅªAÚ6Eµ#<í½õ+
+çbÐâî1$®Óß![·Q
+ßí4 ñ¥Á,qª¸	=õá
+ÖÜçÆGÿ×ÇÎÿ]zcHº
+%¥4$s¸|Å7|p-Ä>H]
+z~)E§ÛF0¯²_A
+àÃ
+ð,%!5ÄÑÖYsçÕìN
+º¤Ì¡zd§&A±ÎÎ
+ÏÂ,?|1A7¤óD2²@Ìl^
+-ÑÊÖ¿ {ÜÃL^dJ?
+ÐúßfQ£øêëN ²ðk'
+ÿIÏÎ«6#ci4+èäÊ
+Ñ6µ^7ti ;×=ÓóyÅ¼Új
+ã¿í|@m2S@Æ¿ä
+¡×¯MÄOÿ{Ê
+:®tÖ
+ØáÁ®T¤
+ZËÊ&ç]U~w$
+çkÒcº+tØÐxÀ'bÔd
+ù³åF­*;&°G´%ù[;
+:[ª/m®Èö .­Ù&»v
+EMÀ7T¼ µõ¡U<Ï·Çýö
+gI¥®É%xù¡ãÆøS1
+ÆaÍXA¥Æ»w0B+
+èLòZ=ì¨Ñ®WýÐb*RèÙ
+è*j¥ é
+TÄÀ¤½
+í<±q
+td©
+:~äT((­±±»©=
+J÷{ JzÄig¦·!ð-
+ÿ\×¥¯g8Î¤¢ÙU
+T÷0Ì.DÜá£å½!:]
+¨ÔÅµÔÎîß.vü0±êÍ½
+1%ÝÞÌ6à=1¬¼~9¬ï|
+[¬(#>lR.ò/©þÆ
+s
+Áâç¼râS(qÛv
+5çK>f¦©9®«Mc%(<C
+Qåý@'Ð22\ý:jËÅ°ê
+`ºªpw}Ùó¦àêêµ¿ô
+ú`ÜcB[i¸féÚÐzÈ÷<
+Üf¨cóÛOº¹Ç¶l$Ù
+_¼b¶Ê·{2WÉ-àè Å¹
+âk!5g]#ìEoÕ(ëð÷æé¨Æ
+M+ F'ãÞëÓ¶ÄÚ«
+ß#ã3"ÛÝ{ÍhÝÉµGßì
+¨)xÿ­îaU3ß3ÕC
+þÙZoáÓx-Æÿ·(Lp 1å
+î{RxâËÝÄâw(3¦{
+åª{V"×g©-Õv{Ã×òd
+áÄµúÅ½dZÖ7ååè÷
+Ô_tH>ÓýúRBÄUEÐR
+1|(}C'ì=m9ü¯
+×ÄIôÜéUNØ0}£xë7âÞõ
+Np±©ÍÔ*gqÚHÄºû
+K^w³9,1ÌÏF¦¡{ëæ
+¼18#ÍD8åXyðÏh²
+-=&$Ü:ÿù32¦dy^,
+=¾u¨·V¯ü½~1îY	
+7^nßEïïôæÓ t£s 
+þ'ûëåä­Ò·ÍÌHR È
+Òñr¯¸K³$JøÑòöU
+>ÖÂäýBÎp¦¦z¢YíQa
+£& òÿíóbn9bNYÇß"®
+=Lä²¶Ä0êEË\ê"X0
+]ÈÙÓùfµr~Â¨©*
+e² BTK`úûáNÝhl3«
+Î$÷)ñëåJ äâMªQ,9
+mÍ¬C.'f¦,ñHÈÚ?bov
+4òKPy:Yg*p»;'ë
+"ÏÔy³HØilÿºâ".Æª
+¯zã0!°â{IZ¨bãE|
+Z×*¶ò r¼jw9ß¬£¥õw)
+*?òKþ7Mæ­Ñçã
+yÉc %÷3fíL5¾'ºôÐ
+¢XõWÀ)A7I»­FY+ÓÅ§
+ónâ©À4,»f|xQÅ
+ôl¦¹î[ÐÎòrEÆ 
+èKäÿòæÁô¯fmã[
+þïhi·ûnd2
+×n¡¿{]l!x
+³·D3jwµz\;&|Odwb
+YÛ§w:â<³2îEú?îoÕ
+¨ýmNQ§Æ]7ìIò«É¯
+í¥CÕY*Ns+A@§4Õd
+ÿºÀ»C#«äp÷Ã2Éª«
+¢ið¢«Í	î±Ã
+^ê
+23uLóÜdùþÐÖùÉó\
+7DvAßø~äó7ä­Irg
+±c´I»LKòCF`¼¥þ¡6;
+k=>õs<^
+dÇAµ~ôz[7>
+
+WÒ ². 5$¦ýâ¶!é«gº
+%ö	SÀt	u-'vNÑ
+kÌn­@v`éæY¤t!×
+76uñå¬j©å¨â
+ö÷Ö 4Ì
+ÖCÙ÷ÆÁ]-9
+ÄØ*ÜaÐä}3¸ãL[sþhü»
+ìÇø~wrÁ0¦½ÔI¸*®Ìÿ
+î\d á{u=Y^3×T :
+&¬6êóD'¦ï.¯!ìf¼
+©ÅÂÅ&t°n-×<wMqó2 x
+<Ãü¬/%¨ Ö  ü ØäÌ¦
+fÙ(6Â StÐCG
+:¡ó@"MdWeôÉ¶`
+Í¦¢Aþñ\B:­ U
+Å$)ï¦@ìB4kë³%äCÆQ
+3bqövÎÖ[-.Ií ¿í+I
+R}§®üPîþ¥®Á®ÂJh·¤
+GºÇ| >u¬´ßX.8
+cKxäæHêÄ1*a8SÔ
+éiE¿ÝVÄ£Ê ®Øíø'
++Å(èBTú	Ì+`eMo
+êDp[UÊó$	&f
+)"<uøËipÏTmñDtõ
+ØÜhÏàþP÷Û{0X#Gð
+Ý¼¬.&| Xí!«ð"
+ÖïrðºS×fð¹®:Õ
+"§Â&Í÷É §xÉ"ªß
+_þ®öFÒü³jÍrxBë
+lÕ-c÷¹>vÖ ÄxI°x9ÏN¬
+ÓkÚ]ßëR(­±À@­O(|Þ§
+GL?SFÁãýøc³&_ìË
+)_²¦_t"	©ô2Ý.:¡¸
+®ãã±¨/ßèÓÑÉ°êý
+:{Eòò£X´vÏÊ_!ð*È
+¬,Lág%wMä3d´¹ÿtL
+ò*ÖÙ#,sìÈÎìQMç
+ßçsþ¡õÕ® ±=qÌÞ
+¸»4X-0ÞÐG0!ELö$±
+I¼¹iDRIçùÃP£öd
+ÈúTnú	çRµ¬^C
+Òé>%°àá7°oÁºä)¢b?D
+
+Þ+-jÓÚ¸j[ê@°zûûÛJ?
+®£dßË=\µ5¢¢Á*ÕíÖ;L
+fn¨f:aiCh?|oU)×3+­
+3Ï:½I¤g1Ì0ÁZ
+§j=éU^ã~¢ÕZæóu
+hGY±u=âY{%îXÁÏ
+1ôsñ=çsý¬Jò#×¦ñ¸
+ÃÓ^ÌþÄx	¶²G(B@2»ó
+am¬:6¢ä9Ôaòî<y	á
+	Ëí-b©Aý °ÌÇúÆëñ
+$½)L	L¢K¨ÖSÝýÖø:
+%}¿]~U¥MµÁ"`iBæçEg
+ñGÁ±/ùoúÛd9SÛ`>SÔË
+gð OEú)O:mý,Òc
+K¤ÂÉ8¼,Þ|-0Ôï_
+ªIT=4$íü[@{X	Ñì
+7ÒÚ2SöY,¤®]#\÷²Vñ
+»æ3ÍÆ$ä¶@q.ÎÊó¸
+1Ä^Äôë Úäß »U®3Ä}[6
+mË]Vÿ«¯A¹8$Qóû8öº
+Þ4ì[B5¾ÑLL&¼Î,Äë;
+yí4½¿£sü»Y¯$Ý¤
+FDd÷qÏ	bR2#j ¥;
+ýçgôGÇ¼~½9ðz£$!.6
+]tFm[VÀg«ñâÇ7Ù¸
+ÜÿºUÍ8`#ýãí\e½
+)I^Þ&øãfÒùnÊ;¡áXù
+gr H`n²Þ/@UG^ÔÉ
+½+êê|:|Ð}Köõ÷Ð7P-
+*§#Â)-^¼7%zSMß'sp
+ÛÕË*8ÚK¹óÇÐa 
+ýËÞÅ­µà{jDñáÀ
+Å£·AZOõiÔ<áLú)	ÓñL
+Ä$þ5_\OïR®Fô¤[7£
+Ûn ºÓ¤äå±5«n%
+/äpp9©dàW~gßYêÔÝ
+õÉabîð	­9®w®ÌÒìÉ
+×¬¤Ã8úz©FyRNöÏ
+ÛùGÿ9	4SÐÒ79âN·Ä
+û>Ô3;×T®6`öú¨3ÊS
+~úæôiV0ôf#ú3~
+åS3¤[®ÚÊäÇ¸µ3aáxÅ
+Õ­Õ>®<	öC$#;ã>RH«
+];«/TÛMFguð`£}< 
+~ 	ççàm­µ;oz-É1ãI
+­ëú¥u± '(jÎ	`O
++ã7s+v)¥!­Q/^Ó
+5åpRIeÂ¯~uF©u++
+}%á»rXlà31îp$S¬
+WÈÔ6%d;û}g<Ð×Ð
+¿6·#Ë³Ô%¬³WÃ~^
+%±üõö#ùpb À&Q4 n
+Cø"7\Jòq£E~6åy%
+jÏÂ:±½ÃÕ-±R4å²yèÎ
+ó ¦nBG6¿\ÐÑíð
+ï'³ËÓÉé¬5ÿ¥bÝIE
+>IÍR²t'¾õ*2²_²
+;w´~#;}&TïªÅ¦ ?!ìfÛ®
+#D&Áï´ÇE@>0"àà"
+µÉVwÎÒjÙE@lBÌ{ùÉ
+òjú¯¥à\°Y3h&°Y
+`ò7Ä<âN»ÛhTÙIkM
+ ÖÄx¶³­ï
+ è3|ñ
+Y÷XöÊ­m±s}Àf§Øèø
+àÙ[SF_ ÜÂ(S!¯åJ¨
+µÕOl>ÕïXÓ¶0AÛc-
+úG7/ùý87d¸ä[þSÝ
+hÎ_"÷QÍÊ
+¶¤<gÿ{
+ 8ð[rvÈ1§¿&;=]è$
+ßQ`è]þÅp³G¾XL}
+Y2#z!»wm§{-_àÍÒ
+³¥ýS@Åayµ¹.LD`¶
+m/ ­Mbq«ùtlC×Ê
+Vr0ðK#O~i¶©{&@è¤.:
+wò-©.à´-¼Ôæèø4
+óò+a´«ÜO¦ë96LP÷¨¶Ý
+V|iFº)"¿Iâ |Åï.\
+ÄPéÛmÒzÔì3«ùZg'
+ôô0ÓF("<æ=:súèKß
+mÆS±@qI7TðnÜ?ÙiðP
+ä Ö\Ñ-È×Äó/ÎZ	ãØ
+ØC;*J½n»Ez?*ôìåq
+óa;åmqK­4ÞSVÙg½
+ãsIû:&ù¸Êq°>×/
+?\&P{IÌ|ÏØZ?àV6
+§©S·UwªÁß#O J#*
+S«FÄV¸ë/g mì
+.¤]³Y¼äìn5{Bö
+M}	!Ú$Lýíq'jÒ3n=
+õÎðÄäX!Áõ½¿"}õ¨
+å~i¬«2Â,¤áR«0¥©ôA*
+zÕ(FYÌZøgd0Í×n
+UøtÀºrn4Ë^zNq3<
+×»M£m%Fï5ÚP z
+W´¥>5âxq"# pj¾©
+QM\cñ´_Sn&<<¢â±C~
+1ÌH{ÚÇbÐ¡l'hvpå4
+åÛ7|#	xf°Ø$Å
+ëâ
+|ý~%uèR¶Ø ñq:5¦
+·ýø¶øµØhç«ÂrPar»
+¡ 5É	&©®yGL¶×Ä:
+\ll3%JYÛô±ÅÆ3¢5
+àÐí¡ïý;qüBØ
+hÆLäZpõÑÔàØx~	ú°ä
+ðoÙ-E]×<ùL$þÕE
+iÂHq²§Ú{ÀkáªS}M¡òg
+ø@Ê7hRÒ{îö¥ëµÏ
+T^ØC¥Åá¼Ò9FÁ2"Nó!
+§B()<jTÎ¡Æn0yn
+BLé6uð	¶ÓÈý­k3
+!xi;_Å4WrîoèÏî
+Ñð<â"øHºðA¥}-
+$H6täð{@ÎÍâÚg[	
+Úrï3¶$9Öìf½|_ê¨aª
+'ÈÏTXIÃqöNÖ@Ë[d
+ê5p?,Ø p²YîHÌ,
+$`&å"MµWvæNfð Á%
+ßÙl;²;§v¬NúÊä*
+äõ«A='¯Öq ÞS³dÌÓ
+®åi¯ü©k~¦âý
+[é¶MmöþÞvãv!I
+
+6ö¿$TéIÈN¹Î¯Ô¦ÇÝ
+Äwlk´é"á|ÂÛElôî
+´l
+¸¨ë¸¤qþL)Úm1C>ÚW½æ¬
+É3eÔÙîÕ1ûÞþÝ5Ú5'
+S
+fÛ´$íÀ¦þë
+}±¯¤³b³¸nPU(MÖRy
+Àw-k·ãùÇõz4Ô{sýµÇ
+ µÐ{^eIq/ÚqÎÿM±)
+K BihÂÈíÚcª)øf¢½
+?Ý¢Â¶"3;fÚàZ©:Ç^
+!Æs²sQ)-è´hò³ÀUJ
+¥u"¾¯7a%qO¡	ÌêÁ¶Y
+dÃòÖSæfG%ú1Ø|î]K&
+OuÇj*­*pÛ!m&íTB2(ý
+>"®Ë@bèÎúÆ<
+u´'ÿÖî%ë î¯4Ä·}/L4
+G¡1ý\ãÉXx[hÕ¹LÙ)=
+sI>G($4 	6Áf;îJ 
+%µOõR°ÈªWÔª}òÌfå§
+ºôy]L]ZkÎ¦R
+r0£§¯
+;×E½Èÿv,Ýêÿþ­+U²®ËÎ?
+mÒ#±ÿÖyäàÜÒóÙ6F
+ÑcXæHaù*ä^ov¡ÃNÇ
+DvuÖOÂEýEùNkm= 
+­!ãÆB;+æG/'h
+\Ðø!
+U%Ë;æë-i_Ï_tS ý
+2<W-ð¾hn£Ö4PÉòÅ,
+ÞF<ÒÏ1£« ÑRñ¸¹
+W)¢ÏmWàÕàH<ÖÎD±Vq
+¤¨ÊA>Ï\±6u;{îÍ
+^>R©i±^P.þ§¥?àU
+Á»ª-átÌç²Ñ}ø×a³z
+;)LÐß[¬YZ*äÊ
+¢ W{SøY:øõ<5ûX
+lìôaî@Zí²÷¾hd?»
+nÅTÁ1U#ºz,z}»»êz1üg
+,­fÓ|ýÂA9Ùño^É|]J
+ÎäÔ*Ë9'Í½«i9bbZÿ³
+¶¬U_²2#L=©7B"ù
+pÅ¯?ð)ÀIÄÓf"$gù*%&
+Éã}ãó Þà.>
+[
+è¿e7<~þÚK`fç
+ö¤;>ÌÑEÜÜ{
+ýMÏ
+l|Måußiá>	ôD½ZÛÅ
+õï¨º´ôÛÑÏ­¢<IfJ
+wBl¶Gi³ÖYAùñbFß÷
+}¨9_ýZ"A6hÒk8yKKë
+
+hÛM®KZ
+g[ÓÖ¹âòm
+
+­Ó¤vÆ¯Ü§õ´À ¸ÙX 
+÷tQ#Ü>½½¸µH÷ªM¯0ú
+6£Ö$e<ú:5¤é¤b³
+ü&@÷áöNrAGæWQB©Ü
+!P
+ÈçWÒÙDù-æ±
+Æ¹àH
+ÚsäÿE¿·]W
+ï[Ðt;¯CJz.¡Tüó
+éW9´Ý!ð?óÅA½ [
+ÈôµöÎe2`nyyh;×A 
+_M\÷ iQ¿ |HvB¸#H
+)LÝâå\ðeTüÝäÁY
+àFvAèõq<¼>ñÒè
+(×FV^âÿA£à'=P1KR(lc
+¡1+[â}[6KÀïUÁ
+âë;Õ-(8¨?i^¾W+Ä?q«°
+6,înäú ~ð<ÑÖ÷é'
+	®yGh§Å?Â[»qîóÀ(µ
+Öq¨"Ö~[ ØÁH©ÑX3
+æmWï"Ë& Ö*©
+bYÇ÷úPéåÀ:¿?imõ³/
+È}½%ÖMªFÈ¼çÚÒáD
+»ÁxªR¸×¼är®+çoÂH
+fÔ'mÑFKõîkü·^Q
+
+~iäñ^ IY2}K{òevÔv
+±ÛÖg®<æ®ßpÎÌÑà!
+²e79³m ÈcßÒïé_È
+oVÖAâä½ {èF}?È
+¸æ6üÝ*¨`¬[<j°Û
+"¥ñ?EA³»Ç :@)Íe¼°
+(í¾÷).Ýä¸ærÝ(Æ­
+­º[ÿpt°R][}/
+ÒhÛ#<ÑÌcâOÆÍµ(öÈ"%
+¡LÏ¼èqädv_)Û>á¹A
+âhfw5fs Ïà\îÿ×_
+rÇ'³ZÖ|fC©Æ0/¥D
+-^U ÀV´çÜzûëm¶Xê
+Uÿò?k!-8¡Lö h0
+ è¼$Å(Î&?ëÇÕÁ7Â
+îÜã6káSüÐÂÙU[cé
+-&ÔòDAvDÎZf?Wû¥
+×VAì0ë,«!hçÿ+mZ 
+øø©DÈË¥ÒiÑ-63/e
+pÑ=Dq()oZÛiøQeÍâ
+R ]S³¥ÂKS×r' 
+nLµ:;øèÐh¹Ò²
+#DËöN$ä´§IëMßÛC¯MÓ
+vÁÌjøhåbÉ1Nd±©{p
+øý¼OáSÞ.©Ïbx-o|Ï
+H\(pXçZL]J
+È9n¶Ó5Óì%Ã4æ
+ñ¸eÇ¥d;ÃöËÔbo6<
+ëÔÏ¥ý^Ël<2¶ì»w Ç
+P4Æ·Æ$IlïÖ"­q
+3_ u7iÄqmù[u «È
+Â{y¢;%;À^Àø¶d%£
+æl­Ô¾ÃÑïâcíyËÔ
+ø²éúh'ùd`Á<<¿¡k<
+±6PÑ£ÈYÞÈ ôWiWã
+%	7r²OüÉ-»·&:¥l
+TK!hA¢IDÆû	pSrf
+¨°Ãìe!GÍ~sB®ÐPï
+8«ëµû]øK¾VgB{ãC
+÷ebk¿ ûñoÞ5IVß¿ä	]
+*î¿ðG[O±û§uRÂIGÄrX2
+p°Ó`îÔ½&¾ª©ÒÛ 
+wS!Þ!fâä÷F2rFOvo
+"wè¹n=²ja³X¾ÔÑÀ
+jgmÍdv¶ªÏsrS5Ö_K
+ÀUvx#Ri)^pÔË¦½!Ù
+¡(}²y¤±âHª;nMõÇ%
+ 8a¤YÎíé¯21f/¸+úw×%
+OðÁÄ7±ÊN~%}1ä¢
+á±9ÿF6^òÍ#°0öìf
+
+»õcÓë³@7 aæFû<ãEÇ
+ßZô_v°x÷¦?q5¬N3´ 
+a\·vE°psIõ{tù~w¾
+l¯²-¥¿"bQð(§bk.ê?÷é
+gêÂ).öie	I%u8ç2Cbµ
+gÏ°)Õ8Ñä5¯-¤~rù5
+¹Ú/³§IµûU0ªcà	
+ëÓã)
++êÂ<$yEv«ª~qW6mË
+¼Äs½%òd4&´P"ñÏ
+m Èò´ÙÀq]ù@·a'n
+0«å­@ÛàÉ¬XÁïQ¢°¨¼
+-a¦ÅX!û'Bº få
+OgG.ÐæRRf¡M¸¯ê
+Ê:(ÞOâ@pÛñ°: 
+Ï|zºëöaö&¡(@EP
+£=iwÄ·¬§øn%Ð3f.z
+3¿þ(Á9A@þeÁs#Çã"K
+& ísÃcáÎïpx	
+)aFëÄW?i)÷×ï
+m
+g(:Wþ²N-ÕÁª
+â4]?.ëNë Æ¯_SJÀ
+ÿ:JðßùGhµ@ôã
++z{ÍäÔáb'y¨ k[
+ï=d«Ïëô/¿8ïîv#Ã^I¢Ï
+¦Hàë+_=îìs²ëÌ,ÌËµÕ
+Z!üÜ¦ËE6þX¥QùÿâLð
+ÉîÝý½(Õ#gmb´æy÷àö
+ÎdyóÃûèZE¥®½(¾
+c/ó´}>3]h¨yÒñ8
+FNÆÉ[acMke«½DÐ
+R°)æ£Åa¹³L¦¨<NÆVø¦
+b÷XáÁ1A&±óì×:«³ÊÌC
+¯P¸ yQ+Ò§ç´±¡ëÀxb¸
+ÄaÇr8ºöpvë·ÐÌø+
+suEËÇùÉmëé±dL+ó¤®
+öl»]b÷¬õV7ßn§fg
+õ¶Ð¶RõæLäÀ¦¡ç:½¯Eâ
+8áx°aÒÀ)&Àô½
+Þ*
+)	 QÔÂúhAØïît_¶áÿ»
+q<ÈÉ:	okÍÈgL1ÒZ§
+ll&`&ë?pR3¿o¡v4n¹
+Ú¯ó»ãM¨»{²£,Ü
+ÊA Dû¡×ÚnMoöâK?¥»Ì
+)úMã§Ííg]¼SO¬RYg
+íÍ¦×c@P½^cn,¶
+óxGÉï=EÓÛ0aª$Üó
+t¼õIÛæz''»®¿å
+°ßoàv¨ÓÒp8Ä>Q)Tx ¥
+ÖÿÓ=GØn²ü­xu9Ïü^
+úKZýU{ ªÇ^ÇVxtòz
+áØ?Ç%»t"s´¬-=
+Ô12ØCÜ^:Âyý.àMl÷­
+s596HÄP[w»'Pù7
+H&¾¸xKÒQãµõÀ¤R
+á*áËá£íC~øã9
+õúW®ÈòÈÒßÍ5sÚFwûd
+ÖuçPâ,ª­*`¤{ 
+TbÐï¢@#f 34
+{é­6!½(ÉHuãGÍÉ÷
+O6$!«Í,îò@%ªw¸:
+$îMªÌÝöWa.Kw¼Tp&à$
+h&¾îÆR}xIÜ_3¹
+ÕâÁËÑ[,Ïoètè¤9>àýÇ
+èÞøÁæömíÛ½sßäÞ±
+ÎsµÙ¸¬ÐdÅeºi÷·Pâ
+ÓwZD(zqÍí¥+¥ÿÅb
+´ÇÄeÄÍbÒ#yQØoé¹IîÉ
+ßê~£!$ån³@r·ëIíó
+Cã×xÀ?ZYje)««ow
+±&pCðõK¹orÿÜó
+÷®½×Ã¨}HW PÀFwÂc
+`b73zäzÕsbzÞÎl¶÷¿
+f|·Ùöð³z±a
+æüï;
+!R¹o}i§)ýçã3Êµ9E
+÷ûÕs)ÝH\ï¶ÙbA
+_$NçY_þöçñhg¶iæù
+Æ]P¶Ó_&¨T¾;Ë!Msà
+°ß
+rêµ)¬ËpñH[çÏ­
+òUEòûõ½¦Bã~<jòïs5
+¡jYakMÒG{WT`/´
+÷&/hþØûjèØù$­ìY­¼J
+ðÕkÀv7¯å¤Ö
+ÄdÛÊ?­Ø4|¶*CóÌ+Ð»
+Tm3çi~«dÞbaZPµÌR
+½ÑJ2}Á§oá#Wæ½8
+í a·ËW¨±¦¬ö¯õ.o¬
+¥±Olìú$µRhÖ~²N0D
+MµûXòdý`B\Ç'!]Á
+liZÃîã;4¬ðõSÑÞ)l&ô
+lX<>a¾ìËûvÑ
+D,ÕáßwfRË·5L
+É®kÿÂÌ°=¯m¶»Å÷
+CÔÙÅÛ°®¾U	Û 2HÅÆ
+÷êiL`ªs¨j3¬º(1Ôôðõ
+jß3ÓÛè#³óoHÍYp
+Ëv4 Zç±ã#$=ºDq]·
+´ì2oBÉÒB[¡-Ò6~]
+õ$S.Ñ½¿k¨?U¦G[3
+üÜn}/>¼âLdÒr×
+¿]!DÛM¶i@(ªTfÞÇbFþ
+µ»:?¨áõ¨±}3#Îxy
+äSgä5«¤æô¬1D=ÚM
+3h²å`åök©Îe]
+ësºìwÐNØ¹¼-~#¾
+j"¬ÝÔËRíp ÀÌ÷
+líEü|Gý!< zøH!
+sÏ6%ï\ÃåuÄ±Úá
+óN#$âZÙSPfÛ±ÙºÐ
+H=÷ã1ØÔuãÏ{%}Ãc
+êvu<õJJÁBBºf/ø
+j YKvR°·ï$£)
+¨²Óký#c¢dS@s{'Q¤=¤
+8,ô%<+Sï3wÛwd
+r¤kªo¯"º)¡ñ©i²ºð
+ÎîðP¥çaÚB%´U{É!¬º
+ï".<ï¶/J/ý$ÛzÖJ¡f
+ÌP¤î}°ãã··ú®ýÍP
+ ÓydÌÖølrÌßôñqßÄñ¥
+±òL½5°O×ÚãSwÈR
+Ëys¾w¬ÿ]oºdÊ|[ï14é
+Ã)Æ'9hºSÌ«(äÛ¶
+/=p±ïïví­}Ôäßv
+½£KySEì?ë}ËìÂ[í ?
+Ñ#9wËËØsãûO7ÿ²ÆÁ
+×íÀ~%íÚ½ ^¹C°'
+
+rS/²D©Ýqê""VHõTïÝ
+Ë¥JNýÞsÓ;rfL¹Ua
+¯ç?Ëf®Dóyánñ÷¸÷=¢¢
+Ã¶£x}Só&{? ¶æÁh
+ú;.åNð<d°'Í41¾ð,
+2ï¨Ì R*I¹BnUái¥¶gRÌ
+&#®+-áÕ]äçFÄÕoB`.ô
+»MJÈPqâÐ<¬@{EXd³P
+Y²DÅ¨XÅyJ]¼v¾¼òõè
+OyË»úêÚiï_aãÿ)àJ
+Ê2a#R< 
+ûTµûÌ* 
+ÇÕÿ´í¡ô{¤kul2û:
+ÁbØá/QMÌ¡l®+Ö
+ÚaS
+4)ñ°Si{#´LÀçÉ:c	M
+aòú1gRB¸ÃqZÎöÀÃ
+­ÍÝÎG
+ïÔG±/ZDüB
+~ìX)¯Ìäzq~E;
+óëq"FÁöyÂC7aFÒ
+#5<2Æ~ãÊífª;	¾û·
+R<ËçNÄ¢
+$^AÆÎ°ÊE
+_ÂÈeðôöðÎÍù%ÇJ ÖÌ
+yòú^v}ÀÂµ®}´R
+ûxØ~)òK|-áüK
+ïÐ§óå~_É±{$&&ç]ÚÄ
+ËëiL;nâIVI1éÐÕ×
+«°"r9{Û2Y÷6@ª
+eøï¸pMé¿ûÌV£8^T
+2 ZvAÜÇjÁ!:ÊBc
+S«1`Î^ÆËe¢*J{z
+mw8¿à÷V@tr@6
+UÕ¿
+ëõbPÔiÙÛê¯ïTÏ|;­4Ã
+ê.uR>j#k<¥ç
+íj«<¡Pé^Bï¸=²t
+ä|4.k5äÚÆ
+¦ËÀÙs
+lÓ%ö¨«Ò´&½n¼`
+²bÅ#¶Å¹ }9¶@êï'
+dÃøäOoH »6JWÒ  =<
+]j/Cý1+Kh°qT°2à
+YµñOéx¥Õhá|ýK*
+.ùí¶)wÅìùN-(;Ù
+±éö?#òÈÞÔ@¨ö½¦È\­`ü÷
+8}æ½pX>£b$6Ï²5îH.M
+sÿv@çæê ua§Ä"\néPè
+ Eë­üïWæ`ô×´!8©=
+ÏoûT¸%G6R³î¿ØÿØ
+O¿0¯í0Çt7
+ÇÈÎå¿øZ6
+ø9d]Ü=b-ç¨ÉAÇ9¸Ra_
+é®Ó#ª%Ä^
+ùîº	s
+gs]_°³3rmÄÑÃZq
+*îò.Ï³!=]Ý8£Ýì
+ÿ5ðªþ¿½M­yærCuy{þ
+l1òAoÜ|.¹³É
+X}ã1Áñtñú |ØÒì¾
+ùd+{á÷ßcÚ|ú#?
+c&P%-^tøèöç®K
+·:CföÒ9Ât3ÏnË^B
+UR;Ç6¸ßTlJL.i1w®H
+«í"¹GþØö×ÜIaéØ
+¸ ÇÁW@)5cK>¾}|v
+±MÈû°JU­¸ÞÉYwÄiÑ
+«ã@K!/ô:MÿYÄÜc0>
+	«	ûqäu¢È²Ô}]k]\
+É­°Â 0u­b®cÅ;0tÛ
+§sA?ËâeÎ¤m>r·§	 
+fX°¤¾£ð¤~ðUWÃ
+øïp­¬àÍëEË·&¥
+ÊX>¥!À	?o¥mLå£_K
+° =ûà®<×0ú`ë
+k¨âT*®DÑlòø ez\
+Å´¸¬V¹¢æNXµ¯
+.Åù¤¥E$ÜË8/0ÞÅê
+~7ä¿Á¡zû¹0ývàË
+­¹jF«¡JCq|`ÛØà¨ 
+mu®I°[léL=Ã}`Ûçþ
+Ox¥¢V¥gëk?bw ^Ð7;
+Íî7Ë¬÷«ªÎñQà=XÙÙM§
+=aÒkZ7iöôkserCsw
+epeæºYÂ|fHWÃé|~ç
+ò£M0C»%Hãö°`Fî>
+_a-'·ÌMQx7^þôF-
+feº£¿i	¼{Ô]£r
+¸Lý»´«A a8½ÙÊªm6Þ
+¨ñ@¡°fÃÌ¹¡cø¦©³w®ã¸
+(²KRØO°Ë,ÑÂÚt
+=N¶Ócµ@JmÙÓL§Xæe
+Ðì®zÔ!¥¨ÊtÀ¿Û*q
+DaÛÕÍ.øFßSAÖCiÜÒ
+d1§-·¥éÈwá5ºX!è
+¸aì|ç0q`h@Oyp
+÷!:Ý2xÝ#OÞºôõµ¤
+U2ºVücÑÊJÕî9Ô0=íÿ
+1à¥ëÉG°üK$*ªåæw
+Å±w¶k3ÜúÇÐºâL°!Ü
+þ®ôCÎââfO'u/Ñ_¨ª
+¡÷ÆÞr°öÅïÍïê"ãDº
+|¤Gró®ÜÛµ@íH+~=
+\íõT±Úð¢DÁ8N
+$Re,GÌZ)ñôeÌ¶k¯ó
+(+/=¤P¾¢c¥ÊÑAÚY
+ÉÀde2 ¥.Ú_s¨vÊ[
+ðòÊWËe>"âHäo Ùj%
+F<û0:Ý&k'ÄÀO¡Us
+¸qhqê
+ê+á}ãw»6
+ôÐ¡ø4=ÍmÙÒ0¬íãÍâ
+[ÚBI	[3=¼ùP
+±qÝ¼®æÚB7Mõë7É¯µ
+õàý²ájàR;µUØFïKpC
+kÎ$*v©ø[nT
+Gìb&Èþn{ÅO'_V&æ`&ã_
+¯wé·Q²';=|e@ï»
+©,Ê	úçÂÊú¡¯ºJ=$
+ùhüÔèkyWpnu;ûK
+êÀ25M/Ðæàsë¤×©
+KÿxøÄ	¿
+wç®à½Úë
+©?5ÝA§}°rñX	ÓÁ
+ø¬áÙIãNèO´tõ
+N
+ý|+Ó¼#Äßã
+O üÞ ¨
+^E¶^]ÁÅá¹?PGÀ
+ä(Ã¬ó 6ä97Ð]~X=È
+¿ÆP*:?´Ë9_×abÇ
+`&nLòòsV¼·>#[<üIí°×J
+¦µ±ÿ¼CP7ZX#oñ |1ù2
+ä?|¡ØlFÀRWh<u&îPùy»
+N¶wÅ,,/ÙùòL4rÑz
+@hAãÞñzé~ãk»>ä`
+·ÍA}ïé@jê
+«7` H
+øîÈÖÍÃ,XFõ±£ë¿ÇU{«
+ÓYÇP^e[R;eÚiÇ´Ón
+h[9:¶ïÚþGïá*°¸A+
+~cû(ÎÔxnþ;dé
+ù
+£Â«tb%àlô =6Y
+2-¨¼QîT·jóéþÎªÁ
+Õ%D^åJZW(M«Q, >¿
+b´Ò TºKÍ¶sÚaÝj
+°ñb<áa×·	hèÒ/nñÅ4
+Àåêd|u:5Çû9nÈÃô$
+yÐMgõÅÍn¼tÀt¸
+vçzQAYaõ:¾6Ö
+ÇPódb
+5õfn¹uN
+@£bFõ³ÅZmã£tñ;Üä
+õ¨x`ùF=­A«ãÞÖMïg
+;gZéù}0¼àIuæ¢mÆ
+ÐJÁÝX§Ö+¾x¯éìb>ª!
+\.î#rÚW©C²ö1ÿsÒ
+§@°NíkS_¡ØíÂ:ÉLX
+ûst.Â5K]©Æ hK.g
+Y¸¼Ö¤teò9æÀåyCÓÂ
+ kO+:Á­ð¯~B,ß
+ÐlÔÏt/?]ì(G5CuªÄtT
+A?$¶4m·à¢Ëí
+VµjN_Åy¸ä~ýîÉ¥>0
+½¦ø¡úÃÞo¥'ê¯!ÂÓûí>U
+ÍTj¢Ú`µà½*°vÁ(ÙR
+_ÕÝßÅÌ¾{"Øg,êÑG
+ÛpP*S&ýÂû»%öLçÖâb
+Æù+wÉ°ca£ø^zZ 7
+è¨^y¦iâ¹sû=3JV'
+!ÙíË,Yë$gïÅ^ùÀý
+QÙðè®¬c±
++¡»¶êZ
+ò6W}L¼Ñ½që&N1Þ
+©I (¨Ô
+þ
+!ã
+Ükßâ!'Ð4Q?%Ýc¨Ô
+C«Ñ"õ+¾w²¸ m,ú¦
+ìÍº»^Ö+ß¥eÓÑ®+5ú
+ Æ·«U¹v1íöÆÙA u?Ç
+Åýf4îÇ®ò4i~
+J5vóq2vÐ ñ}ö`Y×
+¢/ý%o4Bùb¢7xz·
+$	0â¾EÓôÌ	Ý¥×
+»ä>ü/T*ïww}¹¾;Ò¯êr
+rDµWFdföÅ¤RîVu
+M^çjÑû>²ÐÐ¼g#®
+pÍ±ÿ#£Ù<.m7G½_«
+M-È:³p%Á7%R ÔF¥gD
+ç'ÒiÅêNÿmGã¿@ó 8
+Av_§µ;h¨ðy:ÅS»Þ
+9}?Ö»¤-GJP!/AE\_
+´¼ãÎTÊö¥£6wO(
+ß¡Þ^Ç©
+j¾ÖÞT³i}à
+#a9NCvëMÙÍ8'
+§«b/@÷v{l Ï¿È'
+z:@æ\8¼ûÕBß9.f°
+º×8X·ÊÑUÃ/£ª6¸=
+YõêÁL	Í«kM6yôºìh
+>`á6¡×íúæl¬-ÊÀ
+¤lÍ£ÉÔý{Tì¾Î&
+`Íjg¢óHD_Û)"íR7Þ
+zPÊDD»z+9ðÙ¢M
+Ð`XR6ó§ý0x(P³%1ë
+'g±øZþÝýékì
+ãÙP­aÕÅ^&©í»]4'
+C£Á"÷íxÉSK;¨_ô-OÐ
+¬Wb)NûU¯á\UÅÓtàÆ®
+oGÊ;Í cót¡ÒR1G[&
+Ú7ö­Ì&dhB«W
+ô áhiGp:¶¯0¼~Þ»X
+ñx~¬7yõn¼pÏÆÎX
+X
+øu:Í]Uz;,Ý»W3ó0
+ Z®A~Èú%hÔûyPV~æè
+»G;cÝµ«eèóâlN×
+&§8¬îàòÀön6¢1áîäv
+<(IÏ¸ð}^Tî»Ää¥
+ùhÌ~µ±²×¿; Föñ4
+m¼Þ¡vXvx³NíÓ
+Ý5:wÇH
+'+ïæâÚ3ùÁA¶­áõ²
+hÊõò_J³ÚÊÜ>úrrìl
+WÈ5¤®Söp¿(¶,³î
+PÑPÇ:ñù}:~
+§ô~hÓ"¥mtÙ¤£½ïìþ
+t!ÞÁ=ðÃÂÛ#<Ñ³
+ÜÍUkU(IF=úv{T×=ºT²
+§3÷hj;F;0q4gL¶¤Gn
+ÜÊÐg°V¾æAÓM¤MÀ<÷
+÷? ¬\6ìf´±i+þ*õÍB
+¬ÔÒüa½õjcè HÖÃõ
+¤I>yw@òúÆ¶¸¼Àý9¬
+{¿ÑÉfð[DdÇÏôoFüþ­Jè2
+þ8`»ëq¸+Ýs¼ÄÐ)ùk´Ô.
+R×þåÔë«¶àØeþÙ·fA.6
+ÌEÃ·äÉn	¥re1#!ó§­
+]êÃúÜõæ!®Lô³zFÖoÈ
+n¥"ÈøKþ#¾v[ÂâÃ&"
+öÑº¡Y}³ýÊX4EÅÄQ
+jÃîP}kÎ/¨×-÷0
+eì°âV*âûÒiÝuC¸«
+'ÔP7Ó5[E$'Ñß¼
+ÎÔZîÁØ%ý1LÖ4
+XÞE?õàR^¹Ú{¹ÜìÔòt²
+¨PÍÞ3lúv}ù¹"µÙ5
+é n<WBsÑÿt­Ã^Ï¥
+³{³éA$Ù´çH¿?
+¦PÃ¾¸8LHX÷Ð¾Q
+ºªÐB¾ðD»Üd®¸áÕ =
+Ã ó¯÷9é¹ðGí*©Àl®Z
+Âî¨¿EØM>.ß6<Ú^
+²¸ÎÑ;uû`¿e¤e]¦¡
+
+,Î±%½!@¾L×'¶%
+µüë}ùX¢À)Òñ;ssrìÓ
+µ?ÐF ôþÆä>SäuÉË<Á
+>C¨Ë%*i« q"õ¬@
+.°¾!	GÝ1.ëZðÛÆ·¥
+¸YLë! Þê 5ýÀ~p}
+ùÇK²¨:¨Ââ 5NÅ
+ólôô! <ÑÏ@y0ÍshYÞÖ
+fPÒH´¾Ñ¢[S*¿g=¦
+jj<Ô~7òà7TøRÍ}
+È{±RDY÷=3ÒI àýæ
+¿ùP¸¬ ¶`û. ÓQ]hÅ×
+àß 0ëi·M£VtåÈº«Q
+²s&D/wKÊëÂ- RE¡"©
+ÖêB
+ãZÅ&½ØP#&iîOà
+H:dÿ¥DåyPR[
+àYõQ©^¢äþËó~È	µýVA
+fZºF=yÐ³±,eRxîg
+Î9$%ß6¦°hCuAÓ¦Ù+H¹h
+^rÈý¡éJ|«°7àDê,
+Êê¥Ó&ð\øv:çüøÙ£)»
+ß¿ñ.,â(D
+ÕÍ 3+&0i
+îÖv%ëU©ßÏºóàX«
+7[´ÁJÑ@Ü9ù
+Ú1	­
+Æ ?Üâ¼,få%v§wJ
+-]jQF(þl@Òª¿Û\L)
+uÈüZ;<P!:SÖ\Äªq
+þÆìë.nyo,»AáÔ=úÖÈ½
+7«nôçw^ø ß%zS
+öçlêIkó ã£Iû²eâ
+Ð1L ¥##Þ]Ñ3ÂBuª¤
+j9èÖlqAJ­ù 3E6Í
+Þµý~ÛÓð&_ÊçX¢
+¶ù"Ôé1ÑÏF£#[Í©]
+ÇÌÅi.¾~YE½åèÞ«âïÁ
+Ì¸VÈ(>\zÆµäT¦Z·±x
+ÒÔå.(ïäNYe4TÑlè
+K­kbj®[WcåV£SÞÿú
+ãÚEFôøÅ1XHØJÊ¦b
+¢NÊ7Ã«Uº7ølwè
+£Üm@Y>X ßÕ
+ZâM²ç	ó¦¢ .ºká7
+m£×g±;8.çªe2Ò
+÷Í7¿æ0'væøWüÕà0
+é)Âh³ðäÃÊz.£]Â¢k
+÷wÍ«9eäÈ6Tñ[hßw8ë{SK
+Ì}¶¤*oÀ´¾¼ßÒ6{
+tòûVÂ£fø²-w
+êJ}%Ç¾\VwZß!
+38ÿÈQt ®Õ|­/ªþ_o
+?0XàSÞ=.vÝ}ë¸
+wÔnÎD0ËÏÕm~©kWÒä
+
+ÂýJ/{Ô!%d0ew.D
+õÙKPr2t!Ô9ø·Å­ Ü
+sgFþ¸ ]ì~ÓéÞj¸
+²vëÆ\Ì¥;jd ¤à
+#$ÑøÃzóêÝ4¿c
+ã7Ú
+pR'ÿ¿ú #ýµ6Ùvâ_ì
+3]wÜ"ZXLM)1´©æz$
+kª§kÃ@ÁÐçðÕÉpVWâ9
+i¦¡Õ¨*ë9[#Éf2
+n\ûÁëóî0RVëÉÍw
+D$¦f4âªøNa7e'*q
+øSê5Y¶wp[Qª¢@i»ÔÕ
+{þÉH·	&Cù££
+ððªÑÅrìÒÞFÈwÀÀûT
+Ñ±¥(·¼­	H¼>¸lAÆùFÁ
+>¿±A}nõ££¾É¶ç
+Ë1ìae¬ô¦ÐcðYdÛÁÏ
+M®Ã/ÉÝý,Bë1¸NNÑ,7¢
+O1¨Vø¹äÛIÖÈ3Äzæ¸
+·¯à[Rå¯®-. Çze@X
+:KÄà:,R¤w'ZD}âqðs
+¶Ê«ÌYÙ:)_ÈIÍï§Í
+#¢îß!ËS3<GúG	
+üf®pOBÂûA`9ëÖ=R-@
+êjÊWJ#!Ëùý[ï'ÿMØY
+3D36µ5¬¹yÀè
+Èå%n2L){QJÄ$Õ
+Q±¿Ê"Ï}ý>ýxÝ¤{
+®kÝ;Ùt2é£M7pè R
+Ê¦ÎòÛv¬	Ù¤¾\o¨
+AëÁw<PYðãÍÔýRr£î÷
+N^Úû;ß©1WïÎI}Ôa
+ÈfI×îàBQ9ÚÔÃ
+3Ä[edùRú,<
+ç³
+ÅØÏë-¡¯dú=Èq×Aæ
+ýoÀt1×å¸PÍ^£f4Ü
+¶?1y&XçYñoDké×
+ÈßPí?«yüã;; UþX
+÷¡@Hø£*MN÷+°&ì\]
+/ûÑ«ÞðÁyëN±3Ô
+äC7_5áëa÷]'HZkÒM
+Ê¿ÛüzÞ{2¥7$à¡þ
+¶­¢?YÐxÈUBÃoCÜø`
+±vñUÕµ±§C3É¡ìJàHãG
+Q4è^Ç{!¿¾áº¸ÖU&¤
+FõM§¸ªµ¤Ò
+ô¥Ä¬jw¬
+d<Qáu\Um´Eä÷ÌÍ¤
+×½ÊÞÍíTF=3À\`¿
+0:êÂ¯0ÌÚnèøPñ³·]{
+¥÷¬eh¥Í]:?/ÿÜÇ¾
+# ;§½èrëÆ+þ`°
+B»®·gDZk"Ä¹³
+yÈÄCÁbè#FÞ¦ ½
+ÂÒfzfÃà¤$íl:k¼ÛFÌ
+=2.d<EU×p+	\
+¤ØJâC¶Q S¢£úªãæ2	ü
+QYïêË´z@¹NDª¶Ë
+{és®çéåÐºMì{'"¡
+ içkºNWÂ;â0	¦7þ´Ð
+h°Ìù!ÿwÂmslËÄ
+
+Ið9P<Uõík
+?ÌÑJó
+ßeÅ"b¯B7¦o§J>
+ÞLY>ëí\t<É³»
+ Mâ9FìÂ^´¾ï÷Nµ¡p
+ÊØÉZè|ãï øÝßÏgÈ
+ªCä·õÏ¸XÆþý
+®CA<n¹,*	^¸ï0ÞÝ
+¹Öþ8<`ÇñuIµÄ¬Ý
+Ne¥Åã5vHa%vx(È%
+ª7ª*ÖÊµ¤GW¾G`ûR(¬
+ö°4º}çþoèH|½£¯
+efëËÃîâÒÉÝ+`S
+¼Gèc9å?ìBB£´ô±±É
+yÔYÚw}[zIÊC=-%j¹ó
+Ôö	j{K6s^è#0¨ôi
+ÉÝa±$á0%X½¤2\c`@
+½ÕÇ!Uàø1âÉ±FGÕ.Ü
+­¼ ®2wG8I.Öû ¤
+Üá}¿ûÛÌÂÖS_±²
+(îc×Cþb£9£á~
+
+ÀÒM*/DÄsÆ1u´3µ@ 
+¢Ã÷UDÌ=Rdbªt¬É
+¬ÞL>Ø<ý*M©®il¯>¢ù0åq
+ÞÆ¥¼U¶=ùä6n­OI*T
+ìæD½_Z5(ÓFûEÖ,
+,ßþ	ìNá)1ÆµÓ|Øèt
+Ç
+DS9IÆ?À{	÷CQ1­
+P3³O/FqVÞ×i©µ;¾Ì
+éÒòn³:r|(é½¿U*¯;¥
+ÝôLßÒ3Y|OçÎIÀ
+òeÖL/R­¶¿`«
+B[Û±RèOû V®Ìm+[ØfN}
+ÕÛ|@ÃÈuÅ·í>óà
+çýc6@Èø¨Nk¤­è
+ïq¿!KW¸½ÊÊLm°'H­GÕ
+"xÅ«Ö5ö#Ì¾
+c°ËEÎöÜvôüUõS J
+%U¨ò)	å´IW»ÍB44
+:õ»áÏ÷RÙtÔh!fÀÎ
+z ('â$u£ù(Ê]ô
+<¿|j÷ù¸P-1ñÐê
+$ª¸\u6«Í®³Ðj3îM
+c`"üoïÅ	ÿÊÜ]!-
+
+÷!uð
+ðëQÿ=XùL¼úQé'à
+o¶é¦ä¡¼iJb¸6úÑÇµÿ9$
+ÉDùR0Oå	3d^ÊÇvìmÏ
+Fßsâ
+wÃ¯#búí·sët
+ÖË@Ëlö7½Y.dé½MrÂ
+?vkðO4À7©½ÛI r
+©Æ®è^®95Â !|
+§|þ¢"R)¦ëvÿÎ®
+÷¿¿~Ýî@ù%«&wÑ q
+wÀÄ:ýF­@µÀÀ×Ý
+|ÒÄÈ->kè¹!È¢¡¸«$
+ü¸Ùô-ÍGòþ8»P·pØôC
+æÄ4	>M5Ê>Üs0ÅÄÊ
+±PÍ¼Óøò¹á,$è³Ô°
+JÎAÛó ]°®ìùcèÿ
+»MQµí6ÃF`¥°~³0ì "
+zÔzc¿0p¹´Ö¥êH£#
+¾5Ô!ÈwpÕ>¬=¿t@0j
+²µ1éÇNÂ±Ü=6wG
+ëwÃõªKd£ô
+Ê8Ö¼-[
+þ²X¥â6zß1,WüH.rÂ@
+ª6¬»ûËñvåPã7Ò~UQ
+?"fábùÉFHNÿóëöµ
+¸)43ÕAp®¿ â:»ûÎ¬v
+¶	óps«X£7n®AX¡L+
+´ÄGØM~Ü)d¬Þ3iø°
+âßãÂQ7\ïlÉä_
+éàWkGöÐ¦ÜõP(?Üæl 
+Pþäw¸¬ú×ÅþÅ»½O¼æå
+Cïml±Q	ÃåðîNìòã
+DaÅêÍÚåÉÕ¹ø±§
+ Lrf7âl÷1ûwùp
+×É)ì~í=d¦²í­eú
+¹»nAa^3¦D$£¹¹iÁë
+òßkr£³]DNô±ïñ
+)·³ZÕNÊ3µ+Òá±ü
+y®Û³Sg¸nOð9b\×Íªfº
+ã?_hxVSñ´ÚJMRðÔÄ5
+²ßeÇÍ£+¯Ñnàhµªå
+%o¯"MO¯Â5AX6¨»ø
+ÈË~+WÂñ¾àk@M
+­
+©zêPsÖ>C6tBZ_Bg×
+Vl´Ý»hûfÎs&ç\ÿ
+¨6Ñ¥3NÁÑ¡FÎ!½JÐ´
+JûqêcühÚÞÙjf¾µ<½B
+¥«¢MC¦äüÄÚ4´Ý.ç
+¡m:DÜÔG _/"×w¾;~
+¨Â¼¸ØÒ¥ÃaÓ£0EÁà¢0
+X&ßÙ¿§íÁßHj½
+¡ögÕviäKâ7&÷ß
+õ½ÐM+Ãt\9¸8 ¨uNL
+«Ùÿ» @H£/¹âÿ´Ý<
+·
+,(VßÏ)w_UÈ §V
+_ä;þ+ä?Oqæp"µÁÔ:ó
+Î¥Õ2Giú½U+ª³^q
+ãîu§nfþ}¢]ABªv·
++c DÂñ¥Ý1¿ÿj ÄÝ
+5Ì£9¦oÿ5ô
+ù¥
+Z£E)kµÎî½ÒL/üs
+|i¡(q3
+?ÁV¢$u
+v¦Û,g'ÿìuÌóXm®ÍÒ°6
+í"ßQjq¾ùgp¬Oá
+÷Î2î/À.àg[½­ £z
+Â
+[èp3cqlWÕÇ
+:
+wÌ{V ¢ëW;Æw²Í©È,`
+Ñï5rùq+éHjµ
+ãhJëÆK2y2rm»kÔÀF`
+×¯c Éú´ÛÑ[ J<ëÖI
+d¹­ç¸;oRäA°LÏýÆUE
+½ÌR"^më»¼Ú¦ lª	
+ú°IÎüõbâ+)ñã¬- 
+ãp¶>o4ØIªs*Äè
+×qxD»!:èÆ8×ÎÅ,Ì
+ÛºñøóÓÁ»goøL¿WÆÕvÚ
+|í´Ô)`s}¼Z,ü{O@É
+£îþÝETáÃ¦W]GSf
+Ø»<¸¿Dèr+^ÍÛÛt
+Lù?À;P$1úðÒ]ªÁVbã
+G¾kI9Ã¦<ªDI*
+¹k¾
+qRÕt#»xq¨5~Å(ei
+bñÓäÍ4Ú|BK}ÓZÔ
+Ã¸öla¶EÈ:¢,Þ@³ßÛ=¾x
+pÅ¯SVÃ:7{Å·pï+I³
+#+w9½U'i"Y³Qrz
+8øjï{«]Ü:®S&âé¡µ·
+?ÏýõD§ÿ°0®\ì`vÄæ
+O¸ú<ÄóN@ú¥6Ð(
+¾6ñq
+Õ;Ëí	Û{}q#·â2¥'Ð
+äH¾OÛoÅ+¨QÊÔ
+èWI^ÍybÃÂö5ÜB¤à
+Õ¯²ñ	SäHÃ¨!¨Ï Ü!©
+%c3	ïá= æäD&°t
+FïÜÇÇâþ*0È¹3*pø
+-cîê*~yöë·L±u¬f t
+W¥öbÁAëÇ2NhÃ®ã
+  f<,
+6ø¿Æï`£Ì>
+q"j	a/5Ûú
+ãÂtGR{O 3èiÃøQK
+X´H*ÖV¹Øª¦¥¾¼ûE
+j=^5ëÜ-L·Nsz)Ã°JçáW
+ÕPÖÕ£²XåÑÁdíÅª·
+NJ	òm¶ÇBgùGl9Ï¡)3
+ÅT
+5áÅAôháª]N
+âd$)hnm0änó VÛ
+l3ñÔM ,dÛrwe®ÔGõ
+¡°wøUs
+ë÷kA8ýï
+vY½¨)£¹Óíû'ÅÙËpNë
+k®ÆýÂñÚqWË *H
+É: }95ì>éhÁËÉòè
+¬UË£<Ò3¶×¶$!auCÝ
+Ø>À×xØÌÆ*[É Ï
+Iô/à!qúmUWåÅçºj
+O©Î4ÿÎõ}MÜÍxÿiW3
 #+end_example
 
 
+#+BEGIN_SRC bash
+
+  # {b'announce': b'http://torrent.ubuntu.com:6969/announce',
+  #  b'announce-list': [[b'http://torrent.ubuntu.com:6969/announce'],
+  #                     [b'http://ipv6.torrent.ubuntu.com:6969/announce']],
+
+  # info_hash == sha1 of http://torrent.ubuntu.com:6969/announce
+  #echo -n "http://torrent.ubuntu.com:6969/announce" | sha1sum
+  # e22b5378f8e20c56450d6f39a200bb06dcc35a17  -
+  {'info_hash': 'e22b5378f8e20c56450d6f39a200bb06dcc35a17',
+   'peer_id': '1234567890test0987654321',
+   'port': 8098,
+   'uploaded': 0,
+   'downloaded': 0,
+   'left': 700448768,  # not sure here
+  }
+  wget 
+#+END_SRC
